<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_repository_name">Glide - Image loading Library by BumpTech </string>
    <string name="current_repository_name">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_repository_name">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="background_for_banner">background for banner</string>
    <string name="the_download_image">The download image</string>

    <string name="download_text">DOWNLOAD</string>
    <string name="loading_text">Getting Repository</string>

    <string name="download_repository_channel_id">channelId</string>
    <string name="download_notification_channel_description">Download is complete</string>
    <string name="download_notification_channel_name" translatable="true">Repository Downloader</string>
    <string name="action_button_text">Get Details</string>
    <string name="navigate_back">Navigate back</string>
    <string name="file_name_caption">File name:</string>
    <string name="status_caption">Status:</string>
</resources>
