<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="32dp"
        app:backgroundColor="@color/colorPrimaryDark"
        app:buttonTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/download_background">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_repository_name"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/currentprojectradioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/current_repository_name"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/retrofit_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_repository_name"
            android:textSize="@dimen/default_text_size" />
    </RadioGroup>

    <ImageView
        android:id="@+id/download_background"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="#2196F3"
        android:contentDescription="@string/background_for_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/download_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/the_download_image"
        app:layout_constraintBottom_toBottomOf="@+id/download_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/download_background"
        app:srcCompat="@drawable/ic_cloud_download" />

</androidx.constraintlayout.widget.ConstraintLayout>